--- a/app/client/stylesheets/dashboard/delegates/personal.css
+++ b/app/client/stylesheets/dashboard/delegates/personal.css
@@ -21,3 +21,33 @@
 .revoke_delegate:hover:before {
   content:"Remove";
 }
+
+
+/**
+  *   Delegate recent Votes and Issues
+  **/
+
+.delegate__votes,
+.delegate__issues {
+  min-width: 250px;
+  max-width: 550px;
+  min-height: 100px;
+  border: 1px solid #c6c2c0;
+  border-radius: 5px;
+  background-color: #fff;
+  margin: 15px 20px;
+  padding: 5px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.delegate__votes-title {
+  font-size: 22px;
+  font-weight: 700;
+  min-height: 50px;
+  margin: 15px;
+  width: 100%;
+}
