--- a/app/client/templates/dashboard/main/components.html
+++ b/app/client/templates/dashboard/main/components.html
@@ -44,146 +44,6 @@
           <h3 class="feed__message">You created #1234</h3>
         </div>
       </li>
-      <li class="dashboard__feed_item feed__delegate">
-        <div class="col-xs-2 feed__delegate_left">
-          <div class="feed__delegate_icon">
-            <img class="feed__picture" src="/person.jpg" alt="" />
-          </div>
-        </div>
-        <div class="col-xs-10 feed__delegate_right">
-          <h3 class="feed__message">Martin voted on #1224</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__voted">
-        <div class="col-xs-2 feed__voted_left">
-          <div class="feed__voted_icon">
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-          </div>
-        </div>
-        <div class="col-xs-10 feed__voted_right">
-          <h3 class="feed__message">You voted on #1234</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__addition">
-        <div class="col-xs-2 feed__addition_left">
-          <div class="feed__addition_icon">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-          </div>
-        </div>
-        <div class="col-xs-10 feed__addition_right">
-          <h3 class="feed__message">You created #1234</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__delegate">
-        <div class="col-xs-2 feed__delegate_left">
-          <div class="feed__delegate_icon">
-            <img class="feed__picture" src="/person.jpg" alt="" />
-          </div>
-        </div>
-        <div class="col-xs-10 feed__delegate_right">
-          <h3 class="feed__message">Martin voted on #1224</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__voted">
-        <div class="col-xs-2 feed__voted_left">
-          <div class="feed__voted_icon">
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-          </div>
-        </div>
-        <div class="col-xs-10 feed__voted_right">
-          <h3 class="feed__message">You voted on #1234</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__addition">
-        <div class="col-xs-2 feed__addition_left">
-          <div class="feed__addition_icon">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-          </div>
-        </div>
-        <div class="col-xs-10 feed__addition_right">
-          <h3 class="feed__message">You created #1234</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__delegate">
-        <div class="col-xs-2 feed__delegate_left">
-          <div class="feed__delegate_icon">
-            <img class="feed__picture" src="/person.jpg" alt="" />
-          </div>
-        </div>
-        <div class="col-xs-10 feed__delegate_right">
-          <h3 class="feed__message">Martin voted on #1224</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__voted">
-        <div class="col-xs-2 feed__voted_left">
-          <div class="feed__voted_icon">
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-          </div>
-        </div>
-        <div class="col-xs-10 feed__voted_right">
-          <h3 class="feed__message">You voted on #1234</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__addition">
-        <div class="col-xs-2 feed__addition_left">
-          <div class="feed__addition_icon">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-          </div>
-        </div>
-        <div class="col-xs-10 feed__addition_right">
-          <h3 class="feed__message">You created #1234</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__delegate">
-        <div class="col-xs-2 feed__delegate_left">
-          <div class="feed__delegate_icon">
-            <img class="feed__picture" src="/person.jpg" alt="" />
-          </div>
-        </div>
-        <div class="col-xs-10 feed__delegate_right">
-          <h3 class="feed__message">Martin voted on #1224</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__voted">
-        <div class="col-xs-2 feed__voted_left">
-          <div class="feed__voted_icon">
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-          </div>
-        </div>
-        <div class="col-xs-10 feed__voted_right">
-          <h3 class="feed__message">You voted on #1234</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__addition">
-        <div class="col-xs-2 feed__addition_left">
-          <div class="feed__addition_icon">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-          </div>
-        </div>
-        <div class="col-xs-10 feed__addition_right">
-          <h3 class="feed__message">You created #1234</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__delegate">
-        <div class="col-xs-2 feed__delegate_left">
-          <div class="feed__delegate_icon">
-            <img class="feed__picture" src="/person.jpg" alt="" />
-          </div>
-        </div>
-        <div class="col-xs-10 feed__delegate_right">
-          <h3 class="feed__message">Martin voted on #1224</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__voted">
-        <div class="col-xs-2 feed__voted_left">
-          <div class="feed__voted_icon">
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-          </div>
-        </div>
-        <div class="col-xs-10 feed__voted_right">
-          <h3 class="feed__message">You voted on #1234</h3>
-        </div>
-      </li>
     </ol> -->
   </div>
 </template>
@@ -194,51 +54,29 @@
       <span class="glyphicon glyphicon-flag" aria-hidden="true"> Recent Issues</span>
     </div>
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingOne">
-          <h2 class="panel-title">
-            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              How will we manage this?
-            </a>
-          </h2>
-        </div>
-        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-          <div class="panel-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee.
+      {{#each polls}}
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="heading{{@index}}">
+            <h2 class="panel-title">
+              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{this._id}}" aria-expanded="true" aria-controls="{{this._id}}">
+                {{this.poll.name}}
+              </a>
+            </h2>
           </div>
-          <button type="button" class="btn btn-success panel_button">Vote</button>
-        </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingTwo">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Collapsible Group Item #2
-            </a>
-          </h4>
-        </div>
-        <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-          <div class="panel-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+          <div id="{{this._id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{@index}}">
+            <div class="panel-body">
+              {{this.poll.description}}
+            </div>
+            <div class="panel__domain">
+              <h4>Domain</h4>
+              {{#each this.poll.domain}}
+                <span class="label label-default">{{this}}</span>
+              {{/each}}
+            </div>
+            <button type="button" class="btn btn-success panel_button">Vote</button>
           </div>
-          <button type="button" class="btn btn-success panel_button">Vote</button>
         </div>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-heading" role="tab" id="headingThree">
-          <h4 class="panel-title">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Collapsible Group Item #3
-            </a>
-          </h4>
-        </div>
-        <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-          <div class="panel-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-          </div>
-          <button type="button" class="btn btn-success panel_button">Vote</button>
-        </div>
-      </div>
+      {{/each}}
     </div>
   </div>
 </template>
