Added Voted Page and Functionality

--- a/app/client/templates/dashboard/main/components.html
+++ b/app/client/templates/dashboard/main/components.html
@@ -73,7 +73,7 @@
                 <span class="label label-default">{{this}}</span>
               {{/each}}
             </div>
-            <button type="button" class="btn btn-success panel_button">Vote</button>
+            <a href="{{pathFor route='poll'}}" type="button" class="btn btn-success panel_button">Vote</a>
           </div>
         </div>
       {{/each}}
