--- a/app/client/templates/dashboard/vote/vote.html
+++ b/app/client/templates/dashboard/vote/vote.html
@@ -49,35 +49,39 @@
       </div> -->
 
       <div class="issues__list" id="accordion" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default past__votes-item">
-          <div class="panel-heading" role="tab" id="headingOne1">
-            <h2 class="panel-title panel__title">
-              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">
-                How will we manage this?
-              </a>
-            </h2>
-          </div>
-          <div id="collapseOne1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne1">
-            <div class="panel__extra">
-              <div class="col-xs-4 panel__created">
-                <h4>Created at</h4>
-                <span>12.12.2015</span>
-              </div>
-              <div class="col-xs-4 panel__domain">
-                <h4>Domain</h4>
-                <span class="label label-default">Main</span>
-              </div>
-              <div class="col-xs-4 panel__votes">
-                <h4>Votes</h4>
-                <span>215</span>
-              </div>
+        {{#each pastPolls}}
+          <div class="panel panel-default past__votes-item">
+            <div class="panel-heading" role="tab" id="{{this._id}}">
+              <h2 class="panel-title panel__title">
+                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{this._id}}" aria-expanded="true" aria-controls="collapse{{this._id}}">
+                  {{this.poll.name}}
+                </a>
+              </h2>
             </div>
-            <div class="panel-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee.
+            <div id="collapse{{this._id}}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="{{this._id}}">
+              <div class="panel__extra">
+                <div class="col-xs-4 panel__created">
+                  <h4>Created at</h4>
+                  <span>{{this.createdAt}}</span>
+                </div>
+                <div class="col-xs-4 panel__domain">
+                  <h4>Domain</h4>
+                  {{#each this.poll.domain}}
+                    <span class="label label-default">{{this}}</span>
+                  {{/each}}
+                </div>
+                <div class="col-xs-4 panel__votes">
+                  <h4>Votes</h4>
+                  <span>215</span>
+                </div>
+              </div>
+              <div class="panel-body">
+                {{this.poll.description}}
+              </div>
+              <button href="{{pathFor route='voted'}}" type="button" class="btn btn-success panel_button">Results</button>
             </div>
-            <button type="button" class="btn btn-success panel_button">Vote</button>
           </div>
-        </div>
+        {{/each}}
       </div>
     </div>
   </section>
