Added delegate removal

--- a/app/client/templates/dashboard/delegates/personal.html
+++ b/app/client/templates/dashboard/delegates/personal.html
@@ -24,12 +24,12 @@
                 </div>
                 <!-- <div class="delegate__profile-domains">
                   <h5>Domain Expertise:</h5>
-                  {{#each currentUser.delegates(this._id).domain}}
+                  {{#each .. this}}
                     <span class="label label-default">{{this}}</span>
                   {{/each}}
                 </div> -->
                 <div class="delegate__profile-button">
-                  <button class="btn btn-success revoke_delegate"><span class="glyphicon glyphicon-profile" aria-hidden="true"></span> Your Delegate</button>
+                  <button class="btn btn-success revoke_delegate"> Your Delegate</button>
                 </div>
               </div>
               <!-- -->
