--- a/app/client/templates/dashboard/main/menu.html
+++ b/app/client/templates/dashboard/main/menu.html
@@ -24,7 +24,7 @@
         </div>
       </nav>
     </li>
-    <li><a href="/">{{ currentUser.profile.name }}</a></li>
+    <li><a>{{currentUser.profile.name}}</a></li>
     <li><a href="{{pathFor route='create'}}">Create Issue</a></li>
   </ul>
 
