--- a/app/client/templates/dashboard/delegates/delegates.html
+++ b/app/client/templates/dashboard/delegates/delegates.html
@@ -37,16 +37,14 @@
                 </div>
                 <div class="container personal__domain">
                   <!-- Domain Option -->
-                  <div class="row">
-                    <p class="personal__title">Your Expertise</p>
-                    <div class="domain_options">
-                      <select id="personal_expertise" class="select2" multiple="multiple">
-                        <option value="main">Main</option>
-                        <option value="finance">Finance</option>
-                        <option value="administrative">Administrative</option>
-                        <option value="product">Product</option>
-                      </select>
-                    </div>
+                  <p class="personal__title">Your Expertise</p>
+                  <div class="domain_options">
+                    <select id="personal_expertise" class="select2" multiple="multiple">
+                      <option value="main">Main</option>
+                      <option value="finance">Finance</option>
+                      <option value="administrative">Administrative</option>
+                      <option value="product">Product</option>
+                    </select>
                   </div>
                 </div>
               </div>
@@ -79,36 +77,31 @@
               {{/each}}
             </div>
             <div class="delegate__profile-button">
-              <button name="success" class="btn btn-success" data-toggle="modal" data-target="#delegatePerson"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Delegate</button>
+              <button name="success" class="btn btn-success" data-toggle="modal" data-target="#{{this._id}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Delegate</button>
             </div>
           </div>
 
           <!-- Delegate Modal -->
-          <div class="modal fade" id="delegatePerson" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal" id="{{this._id}}" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                   <h4 class="modal-title">{{this.delegate.name}}</h4>
                 </div>
                 <div class="modal-body">
                   <div class="container personal__description">
-                    <div class="row">
-                      <p class="personal__title">Delegate Description</p>
-                      <p class="personal__description">{{this.delegate.description}}</p>
-                    </div>
+                    <p class="personal__title">Delegate Description</p>
+                    <p class="personal__description">{{this.delegate.description}}</p>
                   </div>
                   <div class="container personal__domain">
                     <!-- Domain Option -->
-                    <div class="row">
-                      <p class="personal__title">Choose Domains to Delegate To</p>
-                      <div class="domain_options">
-                        <select class="delegateExpertise select2" multiple="multiple">
-                          {{#each this.delegate.domain}}
-                            <option value="{{this}}">{{this}}</option>
-                          {{/each}}
-                        </select>
-                      </div>
+                    <p class="personal__title">Choose Domains to Delegate To</p>
+                    <div class="domain_options">
+                      <select class="delegateExpertise select2" multiple="multiple">
+                        {{#each this.delegate.domain}}
+                          <option value="{{this}}">{{this}}</option>
+                        {{/each}}
+                      </select>
                     </div>
                   </div>
                 </div>
