Early versoin of votecount function

--- a/app/client/templates/dashboard/vote/vote.html
+++ b/app/client/templates/dashboard/vote/vote.html
@@ -78,7 +78,7 @@
               <div class="panel-body">
                 {{this.poll.description}}
               </div>
-              <button href="{{pathFor route='voted'}}" type="button" class="btn btn-success panel_button">Results</button>
+              <a href="{{pathFor route='voted'}}" type="button" class="btn btn-success panel_button">Results</a>
             </div>
           </div>
         {{/each}}
