--- a/app/client/templates/dashboard/delegates/delegates.html
+++ b/app/client/templates/dashboard/delegates/delegates.html
@@ -1,6 +1,9 @@
 <template name="delegates">
   {{> personal}}
   <section class="delegates">
+    {{#each errors}}
+      {{> error}}
+    {{/each}}
     <div class="delegates__overview">
       <div class="delegates__title">
         <span class="gn-icon gn-icon-delegate" aria-hidden="true"> Delegates</span>
