--- a/app/client/templates/dashboard/main/dashboard.html
+++ b/app/client/templates/dashboard/main/dashboard.html
@@ -1,6 +1,6 @@
 <template name="dashboard">
   <section class="dashboard">
-    <div class="dashboard__top">
+    <div class="container dashboard__top">
       <div class="col-xs-6">
         {{> dashboard__activity}}
       </div>
