--- a/app/client/templates/homepage/home.html
+++ b/app/client/templates/homepage/home.html
@@ -38,7 +38,7 @@
   </section>
   <section class="participate">
     <h1 class="participate__title">Try out Liquid Democracy Now</h1>
-    <div class="participate__more">
+    <div class="container participate__more">
       <div class="participate__more_tile col-md-6">
         <div class="participate__more_icon">
           <i class="participate__discuss_icon glyphicon glyphicon-comment"></i>
