--- a/app/client/templates/dashboard/delegates/delegates.html
+++ b/app/client/templates/dashboard/delegates/delegates.html
@@ -50,7 +50,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button id="delegate__submit" type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
+                <button id="delegate__submit" type="button" class="btn btn-primary">Submit</button>
               </div>
             </div>
           </div>
