--- a/app/client/templates/dashboard/main/dashboard.html
+++ b/app/client/templates/dashboard/main/dashboard.html
@@ -2,7 +2,7 @@
   <section class="dashboard">
     <div class="container dashboard__top">
       <div class="col-xs-6">
-        {{> dashboard__activity}}
+        {{> dashboard__past}}
       </div>
       <div class="col-xs-6">
         {{> dashboard__issues}}
