--- a/app/client/templates/dashboard/main/components.html
+++ b/app/client/templates/dashboard/main/components.html
@@ -1,51 +1,34 @@
-<template name="dashboard__activity">
+<template name="dashboard__past">
   <div class="dashboard__top_title">
     <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
-    Your Feed
+    Past Issues
   </div>
-  <div class="dashboard__activity">
-    <!-- <ol class="dashboard__feed">
-      <li class="dashboard__feed_item feed__addition">
-        <div class="col-xs-2 feed__addition_left">
-          <div class="feed__addition_icon">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+  <div class="dashboard__past">
+    <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+      {{#each pastPolls}}
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="heading{{@index}}">
+            <h2 class="panel-title">
+              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{this._id}}" aria-expanded="true" aria-controls="{{this._id}}">
+                {{this.poll.name}}
+              </a>
+            </h2>
+          </div>
+          <div id="{{this._id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{@index}}">
+            <div class="panel-body">
+              {{this.poll.description}}
+            </div>
+            <div class="panel__domain">
+              <h4>Domain</h4>
+              {{#each this.poll.domain}}
+                <span class="label label-default">{{this}}</span>
+              {{/each}}
+            </div>
+            <a href="{{pathFor route='voted'}}" type="button" class="btn btn-success panel_button">Results</a>
           </div>
         </div>
-        <div class="col-xs-10 feed__addition_right">
-          <h3 class="feed__message">You created #1234</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__delegate">
-        <div class="col-xs-2 feed__delegate_left">
-          <div class="feed__delegate_icon">
-            <img class="feed__picture" src="/person.jpg" alt="" />
-          </div>
-        </div>
-        <div class="col-xs-10 feed__delegate_right">
-          <h3 class="feed__message">Martin voted on #1224</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__voted">
-        <div class="col-xs-2 feed__voted_left">
-          <div class="feed__voted_icon">
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-          </div>
-        </div>
-        <div class="col-xs-10 feed__voted_right">
-          <h3 class="feed__message">You voted on #1234</h3>
-        </div>
-      </li>
-      <li class="dashboard__feed_item feed__addition">
-        <div class="col-xs-2 feed__addition_left">
-          <div class="feed__addition_icon">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-          </div>
-        </div>
-        <div class="col-xs-10 feed__addition_right">
-          <h3 class="feed__message">You created #1234</h3>
-        </div>
-      </li>
-    </ol> -->
+      {{/each}}
+    </div>
   </div>
 </template>
 
